--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "gatsby": "^2.23.9",
     "gatsby-image": "^2.4.8",
+    "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-react-helmet": "^3.3.5",
+    "gatsby-plugin-typescript": "^2.4.16",
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-transformer-remark": "^2.8.18",
     "gatsby-transformer-sharp": "^2.5.6",
@@ -18,7 +24,8 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
