--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["./src/**/*"],
   "compilerOptions": {
+    "types": ["@emotion/core"],
     "target": "esnext",
     "module": "commonjs",
     "lib": ["dom", "es2017"],
