--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-react-helmet": "^3.3.5",
+    "gatsby-plugin-svg-sprite": "^2.0.1",
     "gatsby-plugin-typescript": "^2.4.16",
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-transformer-remark": "^2.8.18",
