--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "body-scroll-lock": "^3.0.3",
+    "contentful": "^7.14.6",
     "gatsby": "^2.23.9",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-emotion": "^4.3.10",
